# Multi-Agent-Search

./: .gitignore  INSTRUCTIONS.md  README.md  Taskfile.yml  _compat.py  autograder.py  game.py  ghostAgents.py  grading.py  graphicsDisplay.py  graphicsUtils.py  index.html  keyboardAgents.py  layout.py  multiAgents.py  multiagentTestClasses.py  pacman.py  pacmanAgents.py  projectParams.py  pyproject.toml  testClasses.py  testParser.py  textDisplay.py  util.py
.github/: FUNDING.yml
.github/workflows/: grade-register.yml  q1.yml  q2.yml  q3.yml  q4.yml  q5.yml  q6.yml
.vendor/alembic-1.18.4.dist-info/: RECORD
.vendor/mako-1.3.12.dist-info/: RECORD
.vendor/numpy-2.4.4.dist-info/: RECORD
.vendor/optuna-4.8.0.dist-info/: RECORD
.vendor/tqdm-4.67.3.dist-info/: RECORD
app/: autograder.py
app/agents/: ghostAgents.py  multiAgents.py
app/config/: projectParams.py
app/controller/: keyboardAgents.py  pacman.py
app/model/: layout.py
app/testing/: autograder.py  grading.py  multiagentTestClasses.py
app/view/: graphicsDisplay.py  graphicsUtils.py
artifacts/optuna/: better_eval_trials.json
artifacts/optuna_save_check/: best.json  trials.json
artifacts/q6/: q6_optuna_tuning.ipynb
docs/: Q4_Explaination.ipynb  Q5_Explaination.ipynb  q2.ipynb  q3.ipynb
docs/problems/: en.md
docs/q1/: q1.md
docs/q6/: q6.md
docs/solutions/: q1.ipynb  q2.ipynb  q6.ipynb
scripts/: pacman_cli_launcher.py  tune_better_eval.py
src/app/: __main__.py  (+7 more)
tests/: autograder.py  grading.py  make_pytest.py  multiagentTestClasses.py  testClasses.py  test_autograder_questions.py
(+119 files in other folders)
